shift #main -1px to the left because it was off (hack fix)

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -3,6 +3,7 @@
   z-index: 1;
   width: 100%;
   pointer-events: none;
+  left: -1px;
 }
 
 #headertext {
